--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
-{
+{ "homepage": "https://k190.github.io/react-calculator",
   "name": "reactlab",
   "private": true,
   "dependencies": {
     "coder": "^0.0.0",
+    "gh-pages": "^6.1.1",
     "nginx-conf": "^2.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^3.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
