--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{ "homepage": "https://k190.github.io/react-calculator",
+{ "homepage": "https://k190.github.io/react-calculator-",
   "name": "reactlab",
   "private": true,
   "dependencies": {
